--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
 
 <body>
 
-	<header>Homework Assg. 1</header>
+	<header>header</header>
 
-	<nav></nav>
+	<nav>nav</nav>
+
+	<div class="clearfix">
 
 	<section>
+
+		<p>section</p>
 	
 		<article>
-	
-			<h1></h1>
-	
-			<h2></h2>
-
-			<h3></h3>
-
-			<p></p>	
+			
+			<p>article</p>
+			<p>h1,h2,h3</p>
+			<p>p</p>	
 
 		</article>
 
 	</section>
 
-	<aside>
-		
-		<p></p>
-		
-	</aside>
+	<aside>aside</aside>
+
+		</div>
+
+	<footer>footer</footer>
 
 </body>
 
-	<footer></footer>
+</html>
 
