--- a/index.html
+++ b/index.html
@@ -18,12 +18,14 @@
 
 	<section>
 
-		<p>section</p>
+		section
 	
 		<article>
+
+			article
 			
-			<p>article</p>
-			<p>h1,h2,h3</p>
+			<p>h1, h2, h3</p>
+
 			<p>p</p>	
 
 		</article>
